objects/Payment_QB__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment QBs</relationshipLabel>
        <relationshipName>Payment_QBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <externalId>true</externalId>
        <label>Payment Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Payment QB</label>
    <nameField>
        <label>Payment QB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment QBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>